# SegmentationVolumeCompression

./: .gitignore  .gitmodules  README.md
SegmentationVolumes/: CMakeLists.txt
SegmentationVolumes/include/segmentationvolumes/: PassDebug.h  PassTonemapper.h  Raystructs.h  SegmentationVolumes.h  SegmentationVolumesPassPathtrace.h  SegmentationVolumesPassPathtraceRayQuery.h  SegmentationVolumesPassPathtraceRayTracing.h
SegmentationVolumes/include/segmentationvolumes/converter/: CElegansConverter.h  CellsConverter.h  MouseConverter.h  NastjaConverter.h  SegmentationVolumeConverter.h
SegmentationVolumes/include/segmentationvolumes/converter/builder/: DAG.h  DAGGPU.h  DAGGPUPassCompaction.h  DAGGPUPassPrefixSum.h  DAGGPUPassPrefixSumOffset.h  DAGGPUPassPreparation.h  DAGGPUPassRoots.h  DAGGPUPassSort.h  DAGGPUPassUnique.h  DAGGPUTest.h  Octree.h
SegmentationVolumes/include/segmentationvolumes/data/: MaterialGenerator.h  SegmentationVolumeMaterial.h
SegmentationVolumes/include/segmentationvolumes/evaluation/: SegmentationVolumesEvaluation.h
SegmentationVolumes/include/segmentationvolumes/scene/: SegmentationVolumesScene.h  Volume.h  VolumeAABB.h  VolumeLOD.h
SegmentationVolumes/include/segmentationvolumes/test/: DAGTraversalTest.h
SegmentationVolumes/lib/: CMakeLists.txt
SegmentationVolumes/resources/scenes/: celegans.xml  cells.xml  evaluation_celegans.sh  evaluation_celegans_svdag_merged_wlod_1.xml  evaluation_celegans_svdag_merged_wlod_32.xml  evaluation_celegans_svdag_merged_wolod_1.xml  evaluation_celegans_svdag_merged_wolod_32.xml  evaluation_celegans_svdag_occupancy_field_merged_wlod_1.xml  evaluation_celegans_svdag_occupancy_field_merged_wlod_32.xml  evaluation_celegans_svdag_occupancy_field_merged_wolod_1.xml  evaluation_celegans_svdag_occupancy_field_merged_wolod_32.xml  evaluation_celegans_svdag_occupancy_field_wlod_1.xml  evaluation_celegans_svdag_occupancy_field_wlod_32.xml  evaluation_celegans_svdag_occupancy_field_wolod_1.xml  evaluation_celegans_svdag_occupancy_field_wolod_32.xml  evaluation_celegans_svdag_wlod_1.xml  evaluation_celegans_svdag_wlod_32.xml  evaluation_celegans_svdag_wolod_1.xml  evaluation_celegans_svdag_wolod_32.xml  evaluation_celegans_svo_wlod_1.xml  evaluation_celegans_svo_wlod_32.xml  evaluation_celegans_svo_wolod_1.xml  evaluation_celegans_svo_wolod_32.xml  evaluation_cells.sh  evaluation_cells_svdag_merged_wlod_1.xml  evaluation_cells_svdag_merged_wlod_32.xml  evaluation_cells_svdag_merged_wolod_1.xml  evaluation_cells_svdag_merged_wolod_32.xml  evaluation_cells_svdag_occupancy_field_merged_wlod_1.xml  evaluation_cells_svdag_occupancy_field_merged_wlod_32.xml  evaluation_cells_svdag_occupancy_field_merged_wolod_1.xml  evaluation_cells_svdag_occupancy_field_merged_wolod_32.xml  evaluation_cells_svdag_occupancy_field_wlod_1.xml  evaluation_cells_svdag_occupancy_field_wlod_32.xml  evaluation_cells_svdag_occupancy_field_wolod_1.xml  evaluation_cells_svdag_occupancy_field_wolod_32.xml  evaluation_cells_svdag_wlod_1.xml  evaluation_cells_svdag_wlod_32.xml  evaluation_cells_svdag_wolod_1.xml  evaluation_cells_svdag_wolod_32.xml  (+26 more)
SegmentationVolumes/resources/scenes/volumes/celegans/: svdag.xml  svdag_merged.xml  svdag_occupancy_field.xml  svdag_occupancy_field_merged.xml  svo.xml
SegmentationVolumes/resources/scenes/volumes/cells/: svdag.xml  svdag_merged.xml  svdag_occupancy_field.xml  svdag_occupancy_field_merged.xml  svo.xml
SegmentationVolumes/resources/scenes/volumes/mouse/: svdag.xml  svdag_merged.xml  svdag_occupancy_field.xml  svdag_occupancy_field_merged.xml  svdag_occupancy_field_test.xml  svo.xml
SegmentationVolumes/resources/shaders/: defines.glsl  environment.glsl  material.glsl  raycommon.glsl  raystructs.glsl
SegmentationVolumes/resources/shaders/builder/: dag_0_preparation.comp  dag_1_sort.comp  dag_2_unique.comp  dag_3_0_prefix_sum.comp  dag_3_1_prefix_sum_offset.comp  dag_4_compaction.comp  dag_5_roots.comp  dag_common.glsl
SegmentationVolumes/resources/shaders/bxdf/bsdf/: bsdf.glsl  disney_bsdf.glsl  disney_clearcoat.glsl  disney_common.glsl  disney_diffuse.glsl  disney_metal.glsl  disney_sheen.glsl
SegmentationVolumes/resources/shaders/main/: pathtrace.glsl
SegmentationVolumes/resources/shaders/main/passes/: pass_debug.comp  pass_tonemapper.comp  segmentationvolumes_pass_pathtrace.comp  segmentationvolumes_pass_pathtrace.rchit  segmentationvolumes_pass_pathtrace.rgen  segmentationvolumes_pass_pathtrace.rint  segmentationvolumes_pass_pathtrace.rmiss
SegmentationVolumes/resources/shaders/trace/: aabb.glsl  intersect.glsl  occupancy_field.glsl  svdag.glsl  svdag_common.glsl  svdag_occupancy_field.glsl  svo.glsl  trace.glsl  trace_rayquery.glsl  trace_raytrace.glsl
SegmentationVolumes/resources/shaders/utility/: color.glsl  constants.glsl  luminance.glsl
SegmentationVolumes/src/segmentationvolumes/: SegmentationVolumes.cpp
